agregadas caracteristicas de a los prestamos como: funcion para retornar un libro
